# rust-stats-overlay

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
docs/: index.html
src/: overlay.html  settings.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  gpu.rs  lib.rs  main.rs  stats.rs
