[package]
name = "an8nymous-stats"
version = "1.0.0"
description = "an8nymous Stats - System Monitor Overlay"
authors = ["an8nymous"]
edition = "2021"

[lib]
name = "an8nymous_stats_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
nvml-wrapper = "0.10"
dirs = "6"
winreg = "0.55"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_System_Performance",
] }
